# MegaFish

./: .gitignore  Dockerfile  OVERNIGHT-LOG.md  README.md  docker-compose.yml  install.ps1  install.sh
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py
backend/app/api/: report.py  simulation.py
backend/app/services/: simulation_config_generator.py
backend/cli/: installer.py  main.py  ui.py
backend/tests/: conftest.py  test_api_health.py  test_cli.py  test_ontology.py
frontend/: .env.example
frontend/src/views/: Home.vue  MainView.vue
