[project]
name = "megafish-backend"
version = "0.2.0"
description = "MegaFish — local-first multi-agent social simulation engine (Neo4j + Ollama)"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MegaFish Contributors" }
]

dependencies = [
    # Core framework
    "flask>=3.0.0",
    "flask-cors>=6.0.0",

    # LLM (OpenAI-compatible format for Ollama)
    "openai>=1.0.0",

    # HTTP client (CLI launcher, client, embedding service)
    "requests>=2.28.0",

    # Neo4j graph database driver
    "neo4j>=5.15.0",

    # OASIS social media simulation
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",

    # File parsing
    "PyMuPDF>=1.24.0",
    # Encoding detection for non-UTF-8 text files
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]
cli = [
    "rich>=13.0.0",
    "typer>=0.12.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
megafish = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]
